--- a/ShopApp.DataAccess/ShopApp.DataAccess.csproj
+++ b/ShopApp.DataAccess/ShopApp.DataAccess.csproj
@@ -13,4 +13,7 @@
     <ProjectReference Include="..\ShopApp.Entities\ShopApp.Entities.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Concrete\Memory\" />
+  </ItemGroup>
 </Project>
